# wasmer-fail

./: Cargo.toml  code.wat
src/: lib.rs
