[package]
name = "wasmer-fail"
version = "0.0.1"
edition = "2021"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1

[dependencies]
wasmer = { version = "2.3.0", default-features = false, features = ["default-singlepass", "default-universal", "wat", "sys"] }
# wasmer = { version = "2.3.0" }
